CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE_NOTES__c.object
<CustomObject>
    <description>County Rate Notes</description>
    <fields>
        <fullName>BODY__c</fullName>
        <description>Body</description>
        <label>Body</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDN_COUNTY_RATE__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>County Rate Plan</description>
        <label>County Rate Plan</label>
        <referenceTo>T_COUNTY_RATE__c</referenceTo>
        <relationshipLabel>County Rate Plan Notes</relationshipLabel>
        <relationshipName>County_Rate1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUBJECT__c</fullName>
        <description>Subject</description>
        <label>Subject</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>County Rate Plan Notes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Rate Plan Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Body_Field_required_validation</fullName>
        <active>true</active>
        <description>Body field cannot be empty</description>
        <errorConditionFormula>ISBLANK(BODY__c )</errorConditionFormula>
        <errorDisplayField>BODY__c</errorDisplayField>
        <errorMessage>Body field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>