CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE_NOTES__c/validationRules/Body_Field_required_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Body_Field_required_validation</fullName>
    <active>true</active>
    <description>Body field cannot be empty</description>
    <errorConditionFormula>ISBLANK(BODY__c )</errorConditionFormula>
    <errorDisplayField>BODY__c</errorDisplayField>
    <errorMessage>Body field cannot be empty</errorMessage>
</ValidationRule>