CHATS_SIT/force-app/main/default/objects/T_COUNTY_RATE_NOTES__c/listViews/County_Plan_Approver_Queue_T_COUNTY_RATE_NOTES.listView-meta.xml
<ListView>
    <fullName>County_Plan_Approver_Queue_T_COUNTY_RATE_NOTES</fullName>
    <filterScope>Queue</filterScope>
    <label>County Plan Approver Queue</label>
    <queue>County_Plan_Approver_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>